--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,79 @@
+body {
+	font-family: 'Fira Sans', sans-serif;
+	font-weight: 300;
+}
+.wrapper {
+	height: 460px;
+	margin: 0 auto;
+	margin-top: 130px;
+}
 #accordion {
-	width: 500px;
+	width: 460px;
 	margin: 0 auto; 
+	position: relative;
 }
 
 .accordion__title {
-	background-color: #eee;
-	text-align: center;
-	padding: 10px;
+	height: 42px;
+	line-height: 42px;
+	border-radius: 21px;
+	text-align: left;
+	padding-left: 20px;
+	color: #696666;
+	background-color: #e7e7e7;
 	box-sizing: border-box;
 	cursor: pointer;
 	transition: margin 1.5s;
+	z-index: 2;
+	position: relative;
+	font-weight: 500;
 }
-
+.accordion__title:after {
+    content: ''; 
+    position: absolute; 
+    right: 20px; bottom: 6px; 
+    border: 8px solid transparent;
+    border-top: 10px solid #ff8663;
+    z-index: 3;
+ }
+.accordion__title_grey {
+	background-color: #696666;
+	color: #fff;
+}
+.accordion__title_active {
+	background-color: #ff8663;
+	color: #fff;
+	transition: 0.5s;
+}
+.accordion__title_active:after {
+    content: ''; 
+    position: absolute; 
+    right: 20px; bottom: 17px; 
+    border: 8px solid transparent;
+    border-bottom: 10px solid #fff;
+    z-index: 3;	
+}
 .accordion__title_active + .accordion__content {
 	display: block;
 	opacity: 1;
-	height: 200px;
+	height: 230px;
+	padding-top: 30px; 
 }
 .accordion__content {
-	padding: 10px;
+	padding: 10px 20px;
 	box-sizing: border-box;
+	background-color: #e7e7e7;
 	opacity: 0;
 	height: 0px;
 	overflow: hidden;
 	transition: 1s;
+	border-radius: 0 0 21px 21px;
+	margin-bottom: 5px;
+	margin-top: -21px;
+	position: relative;
+	z-index: 1;
+}
+img {
+	display: block;
+	margin: 0 auto 24px auto;
 }
